test/src/e2e_vm_tests/test_programs/should_pass/language/unused_generic/src/main.sw
script;

struct S { }

impl<T> S {
  fn f(self, value: T) {
    __size_of::<T>();
  }
}

fn main() {
    (S{}).f(true);
}
